--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -1,8 +1,8 @@
 [testServer]
-BROKER_HOST = 127.0.0.1
+BROKER_HOST = 10.144.132.77
 BROKER_PORT = 5672
-USER = test
-PASSWORD = test
+USER = Nazar
+PASSWORD = 12345
 VHOST = testHost
 EXCHANGE = testExchange
 QUEUE = testQueue
