--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -1,11 +1,11 @@
 [testServer]
 BROKER_HOST = 10.144.132.77
 BROKER_PORT = 5672
-USER = Nazar
+USER = Devon
 PASSWORD = 12345
 VHOST = testHost
-EXCHANGE = testExchange
-QUEUE = testQueue
+EXCHANGE = randomExchange
+QUEUE = randomQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
 
