--- a/testRabbitMQ.ini
+++ b/testRabbitMQ.ini
@@ -2,10 +2,10 @@
 BROKER_HOST = 10.144.132.77
 ;BROKER_HOST = 127.0.0.1
 BROKER_PORT = 5672
-USER = Devon
+USER = Nazar
 PASSWORD = 12345
 VHOST = testHost
-EXCHANGE = randomExchange
-QUEUE = randomQueue
+EXCHANGE = testExchange
+QUEUE = testQueue
 ;EXCHANGE_TYPE = ????
 AUTO_DELETE = true
